src/FinancialForce Accounting/objects/codaFinanceCorrespondence__c.object
<CustomObject>
    <description>Relates to the section on Account that contains the contact and the email address where Mass Emails will be sent.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance Correspondence</relationshipLabel>
        <relationshipName>FinanceCorrespondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Finance Correspondence</relationshipLabel>
        <relationshipName>FinanceCorrespondences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateSent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reminder</fullName>
                </value>
                <value>
                    <fullName>Remittance</fullName>
                </value>
                <value>
                    <fullName>Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Finance Correspondence</label>
    <nameField>
        <displayFormat>FIC{000000}</displayFormat>
        <label>Finance Correspondence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Correspondence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>